# aqua-rag

./: Cargo.toml  README.md
src/: config.rs  document.rs  embedding.rs  error.rs  lib.rs  rag.rs  search_result.rs  storage.rs  text_builder.rs
