[package]
name = "aqua-rag"
version = "0.1.0"
edition = "2021"
description = "Knowledge base management and vector retrieval for aquaDB"

[dependencies]
lancedb = { version = "0.27"}
ort = { version = "2.0.0-rc.12", features = ["ndarray"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = "0.22"
arrow = "58"
arrow-array = "58"
chrono = "0.4"
ndarray = "0.17"